Support standard doclet flags, so that this is usable under Gradle
Fixes #83